force-app/main/default/objects/Sub_ToDo__c/Sub_ToDo__c.object-meta.xml
<CustomObject>
    <description>Subtask for a big task</description>
    <label>Sub-ToDo</label>
    <nameField>
        <label>Sub-ToDo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub-ToDos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>