force-app/main/default/objects/Sub_ToDo__c/fields/ExtId__c.field-meta.xml
<CustomField>
    <fullName>ExtId__c</fullName>
    <label>ExtId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>