force-app/main/default/objects/Sub_ToDo__c/fields/ToDo__c.field-meta.xml
<CustomField>
    <fullName>ToDo__c</fullName>
    <description>To which task does</description>
    <label>ToDo</label>
    <referenceTo>ToDo__c</referenceTo>
    <relationshipLabel>Sub-ToDos</relationshipLabel>
    <relationshipName>Sub_ToDos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>